mail/sec-group.tf
resource "aws_security_group" "mail-redir" {
  name        = "mail-redir"
  description = "Allow traffic for mail redirection"

  ingress {
    from_port   = 25
    to_port     = 25
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow-all-egress" {
  name        = "allow-all-egress"
  description = "Allow all outgoing traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
